--- a/themes/hugo-geekdoc/layouts/partials/site-footer.html
+++ b/themes/hugo-geekdoc/layouts/partials/site-footer.html
@@ -3,7 +3,7 @@
     <div>
       <section class="flex flex-wrap align-center">
         <span class="gdoc-footer__item gdoc-footer__item--row">
-          {{ i18n "footer_build_with" | safeHTML }}
+          {{ i18n "nuxui_version" | safeHTML }}
         </span>
         {{ with .Site.Params.GeekdocLegalNotice }}
           <span class="gdoc-footer__item gdoc-footer__item--row">
