--- a/themes/hugo-geekdoc/layouts/partials/site-header.html
+++ b/themes/hugo-geekdoc/layouts/partials/site-header.html
@@ -1,4 +1,4 @@
-<header class="gdoc-header">
+<header class="gdoc-header" style="border-bottom:0em;">
   <div class="container flex align-center justify-between">
     {{ if .MenuEnabled }}
       <label for="menu-control" class="gdoc-nav__control" tabindex="0">
